--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,5 @@ dependencies {
     testCompile 'junit:junit:4.11'
     testCompile 'org.easytesting:fest-assert-core:2.0M10'
 }
+
+apply from: 'tasks.gradle'
